tests/negative/test_mac_variadic_not_last.orb
mac foo (a b::variadic c) {
    ret ();
};

fnc main () () {};